tests/invalid/const_without_initializer.lang
const my_const: i32;
